Fix: delte scss

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <meta property="og:title" content="Meta Tag Editer - Simple Test" />
+  <meta property="og:description" content="Manage Tournamentes complety 'FREE' in our website without any cost" />
+  <meta property="og:url" content="https://lifo123.github.io/MetaTag-Editer/" />
+  <meta property="og:site_name" content="Meta Tag Editer" />
   <link rel="shortcut icon" href="//www.google.com/favicon.ico">
-  <title>Google Search Results</title>
-  
-  
+  <title>Meta Tag Editer</title>
+
+
   <link rel="stylesheet" href="src/css/Flifo.css">
   <link rel="stylesheet" href="src/css/index.css">
   <meta charset="UTF-8" />
