--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <meta name="Author" content="Lifo123">
   <meta name="description" content="Herramienta sencilla para editar etiquetas meta y mejorar el SEO de tu sitio web. Personaliza títulos, descripciones y más de forma fácil y rápida.">
   
-  <meta property="og:title" content="Meta Tag Editor" />
+  <meta property="og:title" content="Edit" />
   <meta property="og:description" content="Herramienta sencilla para editar etiquetas meta y mejorar el SEO de tu sitio web. Personaliza títulos, descripciones y más de forma fácil y rápida." />
   <meta property="og:image" content="" />
   <meta property="og:url" content="https://lifo123.github.io/MetaTag-Editer/" />
-  <meta property="og:site_name" content="Meta Tag Editor" />
+  <meta property="og:site_name" content="MetaTag Editor" />
 
 
 </head>
