--- a/index.html
+++ b/index.html
@@ -23,14 +23,19 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@MetaTag">
+  <meta name="twitter:title" content="MetaTag Editor">
+  <meta name="twitter:url" content="https://lifo123.github.io/MetaTag-Editor/">
+  <meta name="twitter:description" content="Simple Editor of Meta Tags in HTML 5">
+  <meta name="twitter:image" content="">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Edit" />
-  <meta property="og:description"
-    content="Herramienta sencilla para editar etiquetas meta y mejorar el SEO de tu sitio web. Personaliza títulos, descripciones y más de forma fácil y rápida." />
-  <meta property="og:image" content="" />
-  <meta property="og:url" content="https://lifo123.github.io/MetaTag-Editer/" />
   <meta property="og:site_name" content="MetaTag Editor" />
+  <meta property="og:title" content="MetaTag Editor" />
+  <meta property="og:url" content="https://lifo123.github.io/MetaTag-Editor/" />
+  <meta property="og:description" content="Simple Editor of Meta Tags in HTML 5" />
+  <meta property="og:image" content="" />
 
   <!-- Styles -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
